MYCV2 Tab bar added

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,12 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** My CV app Colours Palette**/
+
+  --my-cv-orange: #F0B67F;
+  --my-cv-pink: #FE5F55;
+  --my-cv-soft-green: #D6D1B1;
+  --my-cv-strong-green: #81B88C;
+  --my-cv-light-green: #EEF5DB;
 }
