MYCV2 Logo added and header added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
+<ion-app class="ion-padding">
+
+    <ion-header >
+        <ion-toolbar>
+            <img src="assets/images/small-logo-black.jpeg" alt="MYCV logo" height="50" width="55">
+        </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+        <ion-router-outlet></ion-router-outlet>
+    </ion-content>
+
 </ion-app>
