--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title  class="ion-text-uppercase ion-text-start p-0">
       News
     </ion-title>
   </ion-toolbar>
